Fixing some CSS spacing issues. #638

--- a/src/html/assets/themes/fabrizio1.0/stylesheets/less/components/header.less
+++ b/src/html/assets/themes/fabrizio1.0/stylesheets/less/components/header.less
@@ -141,7 +141,7 @@ body.trovebox {
         vertical-align: middle;
         margin-bottom: 0;
         width: 125px;
-        height: 16px;
+        height: 15px;
         font-size: 11px;
         padding: 4px 6px;
         
@@ -167,6 +167,7 @@ body.trovebox {
       .btn {
         margin-left: 10px;
         vertical-align: middle;
+        margin-left: -14px;
       }
       /* Logged in profile */
       .profile-link {
